Fix colors overflowing over the bubble

--- a/src/palette-color-picker.scss
+++ b/src/palette-color-picker.scss
@@ -81,7 +81,7 @@ $cpfp-background: #fff;
     position: relative;
     display: inline-block;
     font: 0/0 a;
-    width: 12.66%;
+    width: 11.00%;
     padding-top: 11.00%;
     margin: 1% 2%;
     outline: 1px solid $cpfp-border;
